fixed geocomplete error by adding country and type (regions); hopefully fixed autorun tracker and geolocate, may still be broken if a timeout occurs and the session var geoAccepted = true; added some feedback to geomodal buttons; trying to see which geolocate function succeeds, the global function from centerbutton that does navigator.geolocate, or the map-based autotracker that uses Geolocate package; fixed fullPage route (wasn't in yieldRegion); shrunk the h5 on gallerycard.scss and removed truncate.

--- a/client/styles/galleryCard.scss
+++ b/client/styles/galleryCard.scss
@@ -3,11 +3,17 @@
 .info-card{
 	// margin: 1rem;
 	max-width: 250px;
-	img {
+	
+  img {
 		max-width: 100%;
 	}
-	a {
+	
+  a {
 		color: $clr-green;
 	}
+
+  h5 {
+    font-size: 1.3rem;
+  }
 }
 
